css/style.css
/*
Font colors used:
Black-purple: #433237;
Mulberry: #8e2c48;
Grey:#a5a0a1;
Light grey: #ded9da;

Background colors:
Grey-pink: #f3eaec;
White-pink: #fffcfd;
*/
* {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Inter', sans-serif;
  font-size: 16px;
  color: #433237;
  line-height: 1.5em;
}

h1 {
  font-size: 1em;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 2pt;
  padding: 0 10px;
}

h2 {
  font-family: 'Amiko', sans-serif;
  text-transform: uppercase;
  color: #bd8c8c;
  font-size: 2em;
  font-weight: 600;
  line-height: 1.5em;
}

h3 {
  font-size: 1.2em;
  font-weight: 600;
}

h4 {
  font-family: 'Amiko', sans-serif;
  color: #a5a0a1;
}

h5 {
  font-family: 'Inter', sans-serif;
  font-size: 2em;
  font-weight: 600;
  line-height: 1.5em;
  margin: 20px 0;
}

#index h5 {
  font-family: 'Crimson Text', sans-serif;
  font-size: 2em;
  font-weight: 600;
  line-height: 1.5em;
  margin: 20px 0;
}

figcaption {
  font-style: italic;
}

img {
  width: 100%;
}

/* links */
a {
  color: #c2025b;
  text-decoration: none;
  /* No underlining */
}

a:visited {
  /* visited link */
  color: #c2025b;
}

a:hover,
a:focus {
  color: #c2025b;
  text-decoration: underline;
  /* Underlining when hovering over a link */
}

a:active {
  /* selected link */
  color: #80013c;
}

.button,
.button:visited {
  display: inline-block;
  text-transform: uppercase;
  font-family: 'Amiko', sans-serif;
  color: #ffffff;
  /* needed to override the default link color */
  background-color: #c2025b;
  font-weight: 400;
  padding: 14px 18px;
  border-radius: 3px;
  border-bottom: 2px solid #6e0033;
  /* width of the border, type, color */
  transition: 0.5s background-color;
}

.button:hover,
.button:focus,
.button:active {
  background-color: #6e0033;
  text-decoration: none;
  color: #ffffff;
  /*  opacity: 0.8; */
}

/* Layout styling */
.container {
  padding: 0 15px;
}

.row {
  margin: 25px 0;
  clear: both;
}

#work {
  padding-top: 40px;
}

#work .row {
  padding: 25px 0;
  margin: 0;
  border-bottom: 1px solid #ded9da;
}

#work .rowquest {
  padding-top: 15px;
}

/*.rowknitcase {
  padding-top: 0;
  margin-top: 0;
}
*/

.rowvtime {
  padding-bottom: 20px;
  margin-bottom: 20px;
}

.overlay-button {
  visibility: hidden;
}

main {
  padding-top: 75px;
}

#work .col-lg-5 {
  margin-top: -20px;
  margin-bottom: 40px;
}

.rowvtime .col-lg-5 {
margin-bottom: 80px;
}

[class*="col-"] {
  float: left;
}

/* Header and navbar styling */
header {
  background-color: #f0e4e4;
  z-index: 200;
  padding: 10px 0;
  width: 100%;
  position: fixed;
  -webkit-box-shadow: 0px 4px 5px 0px rgba(80, 68, 92, 0.36);
  -moz-box-shadow: 0px 4px 5px 0px rgba(80, 68, 92, 0.36);
  box-shadow: 0px 4px 5px 0px rgba(80, 68, 92, 0.36);
}

nav>ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

nav>ul>li>a {
  padding: 0 15px;
  text-transform: uppercase;
  font-weight: 700;
  color: #4c333f;
  font-family: 'Amiko', sans-serif;
  word-spacing: 5px;
}

.navtoggle li:not(:last-child) {
  display: none;
}

.navtoggle, .navtoggle.responsive {
  position: relative;
}

.navtoggle li .icon, .navtoggle li .icon:visited {
  color: #4c333f;
  position: absolute;
  padding-top: 14px;
  padding-right: 0;
  right: 0;
  top: 2px;
  font-size: 24px;
}

.navtoggle.responsive li {
  display: block;
  padding: 10px 0;
  text-align: center;
}

.navtoggle.responsive nav {
  padding: 24px 0 0;
}

.navtoggle.responsive li:last-child {
  padding: 0 0 10px;
}

nav a:visited {
  color: #4c333f;
}

nav a:hover,
nav a:focus,
nav a:active {
  color: #9d8d95;
  text-decoration: none;
}

.logo,
.logo:visited {
  fill: #4c333f;
  max-width: 50px;
  transition: 0.5s fill;
}

.logo:hover,
.logo:focus,
.logo:active {
  fill: #9d8d95;
}

/* Footer */
footer {
  background-color: #f0e4e4;
  padding: 50px 10px;
  padding-bottom: 80px;
  clear: both;
}

footer h1 {
  padding: 0;
}

#social-media {
  display: block;
  width: 100%;
  margin-left: -5px;
  margin-top: 10px;
  margin-bottom: 30px;
}

#social-media a {
  font-size: 60px;
}

#social-media a,
#social-media a:visited {
  color: #4c333f;
  padding: 5px;
  transition: 0.5s color;
}

#social-media a:hover,
#social-media a:focus,
#social-media a:active {
  color: #9d8d95;
  text-decoration: none;
}

/* Hero styling */
#hero {
  background-color: #fcf5f5;
  display: inline-block;
  width: 100%;
  height: 80%;
  padding: 72px 10px;
}

#hero p {
  padding: 0.25em 0;
}

#hero span {
  display: block;
}

/*About*/
#about-page main {
  padding-top: 130px;
  padding-bottom: 40px;
}

#about-page img {
  padding: 0 10px;
}

#about-page h2 {
  margin: 10px 0;
}

#about-page h3 {
  margin-top: 20px;
  margin-bottom: -10px;
}

#cv {
  margin: 40px 0;
}


/* Contact-page */
#contact-page main {
  padding-top: 170px;
  padding-bottom: 40px;
}

#contact-page footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 30px 10px;
}



/*Work-page*/
#work-page #work {
  padding-top: 0;
}

/*Knitcase*/
.title {
  padding-top: 200px;
  padding-bottom: 40px;
  text-align: center;
}

#knitcase .col-lg-7 {
padding-bottom: 20px;
}

#knitcase .contents {
  padding-bottom: 30px;
}

#knitcase h2 {
  color: #8e2c48;
  padding-top: 30px;
    clear: both;
}

#knitcase h1 {
  padding: 0;
}

#knitcase .container {
  padding: 0 25px;
}

#knitcase footer {
  padding: 50px 0;
}

#knitcase header .container {
  padding: 0 15px;
}

#knitcase .final-logo {
  margin-top: 30px;
}

#testing1 img, #testing2 img {
  padding: 10px 0;
}

#odd-image-testing {
  margin-bottom: -20px;
}


#gif-flows figcaption {
  padding-bottom: 20px;
  padding-top: 40px;
}

#gif-flows {
  display: flex;
  flex-wrap: wrap;
}

.col-4 {
    padding: 0 20px;
  }

#android-link {
display: block;
margin: 20px 0;
}

#android img {
  padding: 10px 0;
}

#knitcase main {
  margin-bottom: 30px;
}

/* Quest page*/
#quest main {
  padding: 50px, 0;
}

.scroll-button {
  display: flex;
  justify-content: center;
}

.scrollToTopBtn,
.scrollToTopBtn:visited {
  color: #4c333f;
  transition: 0.5s color;
  border: none;
  background: none;
  cursor: pointer;
  font-size: 16px;
  line-height: 20px;
  width: 50%;
  /* place it at the bottom right corner */
  margin-left: auto;
  margin-right: auto;
  margin-top: 30px;
  bottom: 30px;
  /* keep it at the top of everything else */
  z-index: 100;
  /* hide with opacity */
  opacity: 0;
  /* also add a translate effect */
  transform: translateY(100px);
  /* and a transition */
  transition: all 0.5s ease;
}

.scrollToTopBtn:hover,
.scrollToTopBtn:focus,
.scrollToTopBtn:active {
  color: #9d8d95;
  border: none;
}

.showBtn {
  opacity: 1;
  transform: translateY(0);
}

.scrollToTopBtn span {
  display: block;
}

/* Media queries
==============================
Small-Medium devices (400px and larger)
================================= */
@media only screen and (min-width: 400px) {
  #hero {
    height: 80vh;
    padding-top: 120px;
  }
}

/*
  ==============================
  Medium devices (640px and larger)
  ================================= */
@media only screen and (min-width: 640px) {
  header {
    text-align: unset;
  }

  nav {
    width: auto;
    float: right;
    margin-top: 1.3em;
  }

  nav>ul {
    margin: 1em 0;
  }

.navtoggle li .icon {
  padding-top: 40px;
}

  /*ensures menu links aren't hidden*/
  .navtoggle li:not(:last-child) {
    display: inline-block;
  }

  /*ensures hamburger menu is hidden*/
  .navtoggle li:last-child {
    display: none;
  }

  .logo {
    padding-top: 0;
      max-width: 100px;
  }

  main {
    padding-top: 99px;
  }

  body {
    font-size: 1.125em;
  }

  footer {
    padding-bottom: 50px;
  }


  #hero {
    padding-top: 10em;
    height: 90vh;
  }

  #hero p {
    padding: 2em, 0;
  }

  #work {
    padding: 4em 0;
  }

  #work .row {
    padding: 50px 10px;
  }

  #work .rowquest {
    padding-top: 25px;
  }

  #work>img {
    position: relative;
  }

  #work img {
    transition: 0.5s filter;
    display: block;
  }

  #work img:hover {
    background-color: #000;
    filter: brightness(0.4);
  }

  .thumbnail-container {
    position: relative;
  }

  .overlay-button {
    opacity: 0;
    visibility: hidden;
    position: absolute;
    top: 300px;
    left: 330px;
    width: 100%;
  }

  .rowvtime .overlay-button {
    top: 220px;
  }

  a:hover .overlay-button {
    opacity: 100%;
    visibility: visible;
    text-transform: uppercase;
    font-family: 'Amiko', sans-serif;
    color: #ffffff;
    font-weight: 400;
  }

  [class*="col-"] {
    padding-right: 40px;
  }

  #knitcase .col-lg-7 {
    padding-right: inherit;
  }

  .col-md-6 {
    width: 50%;
  }

  .col-4 {
    width: 33%;
  }

  /* Contact-page */
  #contact-page main {
    padding-top: 210px;
    padding-bottom: 40px;
  }

  /* Knitcase-page */

  #gif-flows {
    display: block;
    padding: 40px 0;
  }

  #gif-flows figcaption {
    font-size: 0.8em;
    text-align: center;
  }

  .row::after {
    content: "";
    clear: both;
    display: table;
  }

  /* About-page */

  .skills-and-tools {
    display: inline-block;
  }

  #about-page main {
    padding-top: 160px;
  }

  #about-page h2 {
    margin-top: 0;
    margin-bottom: -10px;
  }


  #about-page img {
    display: block;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    padding-top: 30px;
  }


  .title {
    padding-top: 170px;
    padding-bottom: 40px;
  }

  #work-page main {
    padding-top: 130px;
  }

  .scrollToTopBtn,
  .scrollToTopBtn:visited {
    font-size: 16px;
    line-height: 30px;
    width: 30%;
    /* place it at the bottom right corner */
    position: fixed;
    bottom: 60px;
    right: 25px;
  }
}

/* ==============================
  Large devices (1024px or larger)
  ================================= */
@media only screen and (min-width: 1024px) {
  .col-lg-7 {
    width: 58%;
  }

  .col-lg-5 {
    width: 42%;
  }

  .container {
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
  }

  #hero {
    padding: 5em 10px;
    font-size: 1.5em;
    line-height: 1.5em;
  }

  #hero p {
    padding: 0.75em, 0;
  }

  #about-page footer h1 {
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
  }

  /* Contact-page */
  #contact-page main {
    padding-top: 12em;
    padding-bottom: 40px;
  }

  /*knitcase-page*/

#knitcase img {
  display: block;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
}

#knitcase .col-lg-7 img {
  width: 100%;
}

  #why-knitting {
    display: block;
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    padding: 15px 0;
  }

  #why-knitting img {
    width: 100%;
  }

  #competitor img {
    width: 70%;
    margin-left: -17px;
  }

  #mid-fi img {
    width: 80%;
    padding: 20px 0;
  }

  #testing1 img, #testing2 img {
    padding: 2em 0;
  }

#odd-image-testing {
    margin-bottom: -2em;
  }

  #final-screens img {
    width: 100%;
  }

.col-4 {
      padding: 0;
    }


}

/* ==============================
  X-large devices (1440px or larger)
  ================================= */
@media only screen and (min-width: 1440px) {
  .col-xl-8 {
    width: 67%;
  }

  .col-xl-4 {
    width: 33%;
  }

  #hero {
    padding-top: 9em;
  }

  /* Contact-page */
  #contact-page main {
    padding-top: 18em;
    padding-bottom: 40px;
  }
}

